--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "amplitude-js": "^4.0.0",
     "classnames": "^2.2.5",
     "electron-dl": "^1.6.0",
+    "electron-updater": "^2.16.1",
     "formik": "^0.10.4",
     "from2": "^2.3.0",
     "install": "^0.10.2",
