--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LBRY",
-  "version": "0.20.0-rc.1",
+  "version": "21.1.0",
   "description": "A browser for the LBRY network, a digital marketplace controlled by its users.",
   "homepage": "https://lbry.io/",
   "bugs": {
