--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LBRY",
-  "version": "v21.2.0",
+  "version": "21.3.0",
   "description": "A browser for the LBRY network, a digital marketplace controlled by its users.",
   "homepage": "https://lbry.io/",
   "bugs": {
